examples/test/testpolicy9430.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9430
  namespace: namespace256
spec:
  podSelector:
    matchLabels:
      key18: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value41
          key42: value13
          key35: value48
      podSelector:
        matchLabels:
          key4: value37
